--- a/style.css
+++ b/style.css
@@ -40,9 +40,7 @@ h1, h2{
     padding-top:100px;
     padding-bottom: 30px;
 }
-p{
-    
-}
+
 .main-btn{
     background-color: var(--pink);
     padding: 10px 40px;
@@ -84,7 +82,6 @@ nav button{
 }
 main{
     text-align: center;
-    /* padding: 30px; */
 }
 .hero{
     margin-bottom: 30px;
@@ -155,6 +152,9 @@ main{
 }
 .users p{
     padding-bottom:100px ;
+}
+.end-button h2{
+    padding: 30px 30px;
 }
 footer{
     margin-top: 250px;
@@ -231,6 +231,21 @@ footer span{
 
 /* ----------desktop design--------------- */
 @media screen and (min-width: 650px) {
+    /* ---------globals------------ */
+img{
+    width: 100%;
+    display: block;
+ }
+h1{
+    font-size: 50px;
+}
+h1, h2{
+    color: var(--very-dark-cyan);
+    font-family: 'Poppins', sans-serif;
+
+    padding-top:10px;
+    padding-bottom: 0px;
+}
     body{
         box-sizing: border-box;
         background-color: var(--white);
@@ -240,6 +255,160 @@ footer span{
         font-size: 16px;
         
     }
+    main{
+        text-align: center;
+        width: ;
+    }
+    .hero p{
+        padding: 20px 400px;
+        margin-bottom: 0px;
+    }
+    .hero{
+        margin-bottom: 30px;
+        padding: 30px;
+    }
+    .community img{
+        width: 80%;
+        margin: auto;
+        margin-bottom: 110px;
+    }
+    .community h2{
+        padding: 0px;
+    }
+    .community .message{
+        position: relative;
+    }
+    .figures{
+        display: flex;
+    }
+    .form img, .message img{
+        width: 25px;
+        display: block;
+        margin: 0;
+        /* margin-left: 120px; */
+        position: absolute;
+        left: 0px;
+        bottom: 80px;
+    }
+    .form span, .message span{
+        font-size: 50px;
+        font-weight: 900;
+        color: var(--black);
+    }
+    .form, .message{
+        color: var(--grey);
+        position: relative;
+        
+        margin: auto;
+    }
+    .message{
+        
+        width: 150px;
+    }
+    .form{
+        width: 160px;
+    }
+    
+    .grow-together-wrapper{
+        background-color: var(--grow-together-bc);
+        padding: 0px 30px;
+    }
+    .grow-together-wrapper p{
+        margin-bottom: 0px;
+        padding: 0px 0px 50px 0px;
+    }
+    .grow-together-wrapper img{
+        padding-top: 100px;
+        width: 80%;
+        margin: auto;
+    }
+    
+    
+    .conversation{
+        margin-top: 140px;
+        padding: 10px 30px;
+    }
+    .conversation img{
+        width: 80%;
+        margin: auto;
+    }
+    .users-wrapper{
+        padding: 30px;
+        background-color: var(--grow-together-bc);
+    }
+    .users p{
+        padding-bottom:100px ;
+    }
+    footer{
+        margin-top: 250px;
+        color: var(--white);
+        text-align: left;
+        letter-spacing:.1px;
+        line-height: 25px;
+        
+    }
+    .footer-wrapper{
+        background-color: rgb(0, 37, 46);
+        padding: 50px 30px 20px 30px;
+    }
+    .newsletter h3{
+        margin-bottom: 20px;
+        text-transform: uppercase;
+    }
+    .newsletter form input{
+        display: block;
+        width: 100%;
+        height: 50px;
+        margin-top: 30px;
+        border-radius: 5px;
+        border: none;
+    
+    }
+    form{position: relative;}
+    .newsletter form button{
+        font-size: 17px;
+        font-weight: 500;
+        background-color: var(--pink);
+        padding: 15px 40px;
+        border-radius: 5px;
+        border: none;
+        color: var(--white);
+        margin-top: 15px;
+        position: absolute ;
+        right: 0px;
+    }
+    address ul {
+    list-style-type: none;
+    }
+    address .phone-email img{
+        width: 20px;
+        display: inline-block;
+        margin-right: 20px;
+        margin-top: 20px;
+    }
+    address .social-media{
+        display: flex;
+        margin: 20px 0px;
+    }
+    .social-media li{
+        margin-right: 20px;
+        
+    }
+    .social-media li i{
+        size: 5x;
+    }
+    footer span{
+        background-image: url(./images/logo.svg);
+        width: 200px;
+        height: 40px;
+        text-align: right;
+        display: block;
+        font-size: 40px;
+        font-weight: 900;
+        line-height: 40px;
+        margin: 150px 10px 10px 0px;
+    }
+    
 }
 
 
