--- a/scss/globals.css
+++ b/scss/globals.css
@@ -13,8 +13,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
   line-height: 1.3;
   width: 375px;
   text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=globals.css.map */
