--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -9,9 +9,11 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
     line-height: 1.3;
     width: 375px;
     text-align: center;
+    box-sizing: border-box;
 }
 
     
