--- a/scss/style.css
+++ b/scss/style.css
@@ -13,9 +13,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
   line-height: 1.3;
   width: 375px;
   text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+}
+
+.attribution a {
+  color: #3e52a3;
 }
 
 header {
@@ -37,9 +50,9 @@ header button {
   padding: 5PX;
   font-size: 10px;
   border-radius: 50px;
-  border: 1px solid var(--pink);
-  color: var(--pink);
-  background-color: var(pink);
+  border: 1px solid #ff52bf;
+  color: #ff52bf;
+  background-color: white;
 }
 
 .hero {
@@ -49,5 +62,205 @@ header button {
 
 .hero h1 {
   font-size: 30px;
+}
+
+.hero .main-btn {
+  background-color: #ff52bf;
+  padding: 15px 40px;
+  border-radius: 50px;
+  border: none;
+  color: white;
+  -webkit-box-shadow: 0px 4px 15px 1px gray;
+          box-shadow: 0px 4px 15px 1px gray;
+  margin-top: 30px;
+}
+
+.community {
+  margin: 0;
+  padding: 30px;
+}
+
+.community .community-img img {
+  width: 100%;
+  margin: 30px 0 120px 0;
+}
+
+.community .figures {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.community .figures .communities, .community .figures .message {
+  width: 170px;
+  height: 140px;
+  position: relative;
+  margin-bottom: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.community .figures .communities span, .community .figures .message span {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.community .figures .communities img, .community .figures .message img {
+  width: 35px;
+  position: absolute;
+  top: 0;
+}
+
+.grow-together {
+  margin: 0;
+  padding: 25px;
+  background-color: #f5faff;
+  position: relative;
+}
+
+.grow-together .grow-together-img img {
+  width: 85%;
+  margin: 30px 0 60px 0;
+}
+
+.conversation {
+  margin: 0;
+  padding: 30px;
+}
+
+.conversation .conversation-img img {
+  width: 85%;
+  margin: 30px 0 60px 0;
+}
+
+.users {
+  padding: 30px;
+  background-color: #f5faff;
+}
+
+.users .users-img img {
+  width: 85%;
+  margin: 30px 0 60px 0;
+}
+
+.bottom-hero {
+  padding: 30px;
+}
+
+.bottom-hero .main-btn {
+  background-color: #ff52bf;
+  padding: 15px 40px;
+  border-radius: 50px;
+  border: none;
+  color: white;
+  -webkit-box-shadow: 0px 4px 15px 1px gray;
+          box-shadow: 0px 4px 15px 1px gray;
+  margin-top: 30px;
+  margin-bottom: 150px;
+}
+
+footer {
+  background-color: #00252e;
+  color: white;
+  padding: 30px;
+  text-align: left;
+}
+
+footer .newsletter h3 {
+  text-transform: uppercase;
+}
+
+footer .newsletter form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+footer .newsletter form input {
+  width: 100%;
+  height: 50px;
+  border-radius: 5px;
+  margin: 10px 0;
+  border: none;
+}
+
+footer .newsletter form button {
+  width: 50%;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff52bf;
+  color: white;
+  font-weight: 700;
+}
+
+footer .huddle-para {
+  margin-bottom: 50px;
+  margin-top: 120px;
+}
+
+footer .huddle-para .big-text {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: "Poppins";
+  width: 190px;
+  text-align: right;
+  background-image: url(./../images/logo.svg);
+  background-repeat: no-repeat;
+  background-size: 190px 30px;
+  background-position: left center;
+}
+
+footer .huddle-para .big-text p {
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+}
+
+footer address ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+footer address .phone-email li {
+  margin-bottom: 20px;
+}
+
+footer address .phone-email img {
+  margin-right: 20px;
+}
+
+footer address .social-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+}
+
+footer address .social-media li {
+  margin-right: 20px;
 }
 /*# sourceMappingURL=style.css.map */
