--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,27 +1,208 @@
-@import "variables";
 @import "globals";
+@import "variables";
+@import "mixins";
+.attribution { 
+  font-size: 11px; 
+  text-align: center;
+  position: absolute;
+ 
+}
+.attribution a { color: rgb(62, 82, 163); }
 header{
-    padding: 30px 20px 120px 20px;
-    display: flex;
-    justify-content: space-between;
-    img{
-        width: 30%;
-    }
-    
-        button{
-            width: 80px;
-            padding: 5PX;
-            font-size: 10px;
-            border-radius: 50px;
-            border: 1px solid var(--pink);
-            color: var(--pink);
-            background-color: var(pink);}  
+  padding: 30px 20px 120px 20px;
+  display: flex;
+  justify-content: space-between;
+  img{
+    width: 30%;
+  }
+  
+  button{
+    width: 80px;
+    padding: 5PX;
+    font-size: 10px;
+    border-radius: 50px;
+    border: 1px solid $pink;
+    color: $pink;
+    background-color:$white
+  }  
     
 }
 .hero{
-    margin-bottom: 30px;
-    padding: 20px;
-    h1{
-        font-size: 30px;
+  margin-bottom: 30px;
+  padding: 20px;
+  h1{
+      font-size: 30px;
+  }
+  .main-btn{
+      @include main-button;
+  }
+}
+// --------community section 
+.community{
+  margin: 0;
+  padding: 30px;
+  .community-img img{
+    width: 100%;
+    margin: 30px 0 120px 0;
+  }
+  .figures{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .communities, .message{
+      width: 170px;
+      height: 140px;
+      position: relative;
+      margin-bottom: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      span{
+        font-size: 60px;
+        font-weight: 700;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 35px;
+        position: absolute;
+        top: 0;
+      }
     }
+  }
+}
+
+// ---------community section end
+
+// ----------grow-together section   
+
+.grow-together{
+  margin: 0;
+  padding: 25px;
+  background-color: $very-pale-blue;
+  position: relative;
+  .grow-together-img img{
+    width: 85%;
+    margin: 30px 0 60px 0;
+  }
+
+}
+
+// -------grow-together section end
+
+//---------conversation section 
+.conversation{
+  margin: 0;
+  padding: 30px;
+  .conversation-img img{
+    width: 85%;
+    margin: 30px 0 60px 0;
+  }
+}
+// --------conversation section end
+
+// -----------users section 
+.users{
+  padding: 30px;
+  background-color: $very-pale-blue;
+  .users-img img{
+    width: 85%;
+    margin: 30px 0 60px 0;
+  }
+}
+
+// ------------users section end
+
+//-------------bottom hero
+.bottom-hero{
+  padding: 30px;
+  .main-btn{
+    @include main-button;
+    margin-bottom: 150px;
+}
+}
+// -------------bottom hero end
+
+// ---------------footer section 
+footer{
+  background-color: $very-dark-cyan;
+  color: $white;
+  padding: 30px;
+  text-align: left;
+  .newsletter{
+    h3{
+      text-transform: uppercase;
+    }
+    form{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      input{
+        width: 100%;
+        height: 50px;
+        border-radius: 5px;
+        margin: 10px 0;
+        border: none;
+      }
+      button{
+        width:50% ;
+        height: 50px;
+        border-radius: 5px;
+        border: none;
+        background-color: $pink;
+        color: $white;
+        font-weight: 700;
+        
+      }
+    
+    }
+  }
+  .huddle-para{
+    margin-bottom: 50px;
+    margin-top: 120px;
+    .big-text{
+      font-size: 40px;
+      font-weight: 700;
+      font-family: "Poppins";
+      width: 190px;
+      text-align: right;
+      background-image: url(./../images/logo.svg);
+      background-repeat: no-repeat;
+      background-size: 190px 30px;
+      background-position: left center;
+      p{
+        margin-block-start: 0;
+      }
+
+      
+    }
+  }
+  address{
+    
+    
+    ul{
+      list-style-type: none;
+      padding: 0;
+    }
+    .phone-email{
+      li{
+        margin-bottom: 20px;
+      }
+      img{
+        margin-right: 20px;
+      }
+    }
+    .social-media{
+      display: flex;
+      margin-top: 50px;
+      li{
+        margin-right: 20px;
+      }
+     
+    }
+
+  }
+}
+@media  screen and (min-width:840px) {
+  
 }
